src/.antlr/PatitoParser.java
// Generated from /Users/luisgarcia/Documents/LuisCoding/Octavo/Compiladores/Patito/src/Patito.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PatitoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAMA=1, VARS=2, INICIO=3, FIN=4, ENTERO=5, FLOTANTE=6, NULA=7, SI=8, 
		SINO=9, MIENTRAS=10, HAZ=11, ESCRIBE=12, CTE_FLOAT=13, CTE_INT=14, LETRERO=15, 
		MAS=16, MENOS=17, POR=18, ENTRE=19, DIFERENTE=20, IGUAL=21, MENORQUE=22, 
		MAYORQUE=23, ASIGNA=24, PARENTESISIZQ=25, PARENTESISDER=26, LLAVEIZQ=27, 
		LLAVEDER=28, CORCHIZQ=29, CORCHDER=30, COMA=31, PUNTOYCOMA=32, DOSPUNTOS=33, 
		ID=34, WS=35;
	public static final int
		RULE_programa = 0, RULE_varsOpcional = 1, RULE_funcsOpcional = 2, RULE_vars = 3, 
		RULE_listDecl = 4, RULE_listId = 5, RULE_listIdComa = 6, RULE_tipo = 7, 
		RULE_funcs = 8, RULE_tipoOpcional = 9, RULE_paramsOpcional = 10, RULE_params = 11, 
		RULE_paramsP = 12, RULE_cuerpo = 13, RULE_listaEstatutos = 14, RULE_estatuto = 15, 
		RULE_asigna = 16, RULE_condicion = 17, RULE_sinoOpcional = 18, RULE_ciclo = 19, 
		RULE_llamada = 20, RULE_argsOpcional = 21, RULE_args = 22, RULE_argsP = 23, 
		RULE_imprime = 24, RULE_listaImp = 25, RULE_listaImpP = 26, RULE_elemImp = 27, 
		RULE_expresion = 28, RULE_relOpcional = 29, RULE_opRel = 30, RULE_exp = 31, 
		RULE_expP = 32, RULE_termino = 33, RULE_terminoP = 34, RULE_factor = 35, 
		RULE_signoOpcional = 36, RULE_factorBase = 37, RULE_cte = 38;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "varsOpcional", "funcsOpcional", "vars", "listDecl", "listId", 
			"listIdComa", "tipo", "funcs", "tipoOpcional", "paramsOpcional", "params", 
			"paramsP", "cuerpo", "listaEstatutos", "estatuto", "asigna", "condicion", 
			"sinoOpcional", "ciclo", "llamada", "argsOpcional", "args", "argsP", 
			"imprime", "listaImp", "listaImpP", "elemImp", "expresion", "relOpcional", 
			"opRel", "exp", "expP", "termino", "terminoP", "factor", "signoOpcional", 
			"factorBase", "cte"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'programa'", "'vars'", "'inicio'", "'fin'", "'entero'", "'flotante'", 
			"'nula'", "'si'", "'sino'", "'mientras'", "'haz'", "'escribe'", null, 
			null, null, "'+'", "'-'", "'*'", "'/'", "'!='", "'=='", "'<'", "'>'", 
			"'='", "'('", "')'", "'{'", "'}'", "'['", "']'", "','", "';'", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PROGRAMA", "VARS", "INICIO", "FIN", "ENTERO", "FLOTANTE", "NULA", 
			"SI", "SINO", "MIENTRAS", "HAZ", "ESCRIBE", "CTE_FLOAT", "CTE_INT", "LETRERO", 
			"MAS", "MENOS", "POR", "ENTRE", "DIFERENTE", "IGUAL", "MENORQUE", "MAYORQUE", 
			"ASIGNA", "PARENTESISIZQ", "PARENTESISDER", "LLAVEIZQ", "LLAVEDER", "CORCHIZQ", 
			"CORCHDER", "COMA", "PUNTOYCOMA", "DOSPUNTOS", "ID", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Patito.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PatitoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode PROGRAMA() { return getToken(PatitoParser.PROGRAMA, 0); }
		public TerminalNode ID() { return getToken(PatitoParser.ID, 0); }
		public TerminalNode PUNTOYCOMA() { return getToken(PatitoParser.PUNTOYCOMA, 0); }
		public VarsOpcionalContext varsOpcional() {
			return getRuleContext(VarsOpcionalContext.class,0);
		}
		public FuncsOpcionalContext funcsOpcional() {
			return getRuleContext(FuncsOpcionalContext.class,0);
		}
		public TerminalNode INICIO() { return getToken(PatitoParser.INICIO, 0); }
		public CuerpoContext cuerpo() {
			return getRuleContext(CuerpoContext.class,0);
		}
		public TerminalNode FIN() { return getToken(PatitoParser.FIN, 0); }
		public TerminalNode EOF() { return getToken(PatitoParser.EOF, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(PROGRAMA);
			setState(79);
			match(ID);
			setState(80);
			match(PUNTOYCOMA);
			setState(81);
			varsOpcional();
			setState(82);
			funcsOpcional();
			setState(83);
			match(INICIO);
			setState(84);
			cuerpo();
			setState(85);
			match(FIN);
			setState(86);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarsOpcionalContext extends ParserRuleContext {
		public VarsContext vars() {
			return getRuleContext(VarsContext.class,0);
		}
		public VarsOpcionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varsOpcional; }
	}

	public final VarsOpcionalContext varsOpcional() throws RecognitionException {
		VarsOpcionalContext _localctx = new VarsOpcionalContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_varsOpcional);
		try {
			setState(90);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VARS:
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				vars();
				}
				break;
			case INICIO:
			case ENTERO:
			case FLOTANTE:
			case NULA:
			case LLAVEIZQ:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncsOpcionalContext extends ParserRuleContext {
		public FuncsContext funcs() {
			return getRuleContext(FuncsContext.class,0);
		}
		public FuncsOpcionalContext funcsOpcional() {
			return getRuleContext(FuncsOpcionalContext.class,0);
		}
		public FuncsOpcionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcsOpcional; }
	}

	public final FuncsOpcionalContext funcsOpcional() throws RecognitionException {
		FuncsOpcionalContext _localctx = new FuncsOpcionalContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_funcsOpcional);
		try {
			setState(96);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ENTERO:
			case FLOTANTE:
			case NULA:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				funcs();
				setState(93);
				funcsOpcional();
				}
				break;
			case INICIO:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarsContext extends ParserRuleContext {
		public TerminalNode VARS() { return getToken(PatitoParser.VARS, 0); }
		public ListDeclContext listDecl() {
			return getRuleContext(ListDeclContext.class,0);
		}
		public VarsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vars; }
	}

	public final VarsContext vars() throws RecognitionException {
		VarsContext _localctx = new VarsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_vars);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(VARS);
			setState(99);
			listDecl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListDeclContext extends ParserRuleContext {
		public ListIdContext listId() {
			return getRuleContext(ListIdContext.class,0);
		}
		public TerminalNode DOSPUNTOS() { return getToken(PatitoParser.DOSPUNTOS, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode PUNTOYCOMA() { return getToken(PatitoParser.PUNTOYCOMA, 0); }
		public ListDeclContext listDecl() {
			return getRuleContext(ListDeclContext.class,0);
		}
		public ListDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listDecl; }
	}

	public final ListDeclContext listDecl() throws RecognitionException {
		ListDeclContext _localctx = new ListDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_listDecl);
		try {
			setState(112);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				listId();
				setState(102);
				match(DOSPUNTOS);
				setState(103);
				tipo();
				setState(104);
				match(PUNTOYCOMA);
				setState(105);
				listDecl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				listId();
				setState(108);
				match(DOSPUNTOS);
				setState(109);
				tipo();
				setState(110);
				match(PUNTOYCOMA);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListIdContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PatitoParser.ID, 0); }
		public ListIdComaContext listIdComa() {
			return getRuleContext(ListIdComaContext.class,0);
		}
		public ListIdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listId; }
	}

	public final ListIdContext listId() throws RecognitionException {
		ListIdContext _localctx = new ListIdContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_listId);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(ID);
			setState(115);
			listIdComa();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListIdComaContext extends ParserRuleContext {
		public TerminalNode COMA() { return getToken(PatitoParser.COMA, 0); }
		public TerminalNode ID() { return getToken(PatitoParser.ID, 0); }
		public ListIdComaContext listIdComa() {
			return getRuleContext(ListIdComaContext.class,0);
		}
		public ListIdComaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listIdComa; }
	}

	public final ListIdComaContext listIdComa() throws RecognitionException {
		ListIdComaContext _localctx = new ListIdComaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_listIdComa);
		try {
			setState(121);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(117);
				match(COMA);
				setState(118);
				match(ID);
				setState(119);
				listIdComa();
				}
				break;
			case DOSPUNTOS:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoContext extends ParserRuleContext {
		public TerminalNode ENTERO() { return getToken(PatitoParser.ENTERO, 0); }
		public TerminalNode FLOTANTE() { return getToken(PatitoParser.FLOTANTE, 0); }
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_tipo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_la = _input.LA(1);
			if ( !(_la==ENTERO || _la==FLOTANTE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncsContext extends ParserRuleContext {
		public TipoOpcionalContext tipoOpcional() {
			return getRuleContext(TipoOpcionalContext.class,0);
		}
		public TerminalNode ID() { return getToken(PatitoParser.ID, 0); }
		public TerminalNode PARENTESISIZQ() { return getToken(PatitoParser.PARENTESISIZQ, 0); }
		public ParamsOpcionalContext paramsOpcional() {
			return getRuleContext(ParamsOpcionalContext.class,0);
		}
		public TerminalNode PARENTESISDER() { return getToken(PatitoParser.PARENTESISDER, 0); }
		public VarsOpcionalContext varsOpcional() {
			return getRuleContext(VarsOpcionalContext.class,0);
		}
		public TerminalNode LLAVEIZQ() { return getToken(PatitoParser.LLAVEIZQ, 0); }
		public CuerpoContext cuerpo() {
			return getRuleContext(CuerpoContext.class,0);
		}
		public TerminalNode LLAVEDER() { return getToken(PatitoParser.LLAVEDER, 0); }
		public TerminalNode PUNTOYCOMA() { return getToken(PatitoParser.PUNTOYCOMA, 0); }
		public FuncsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcs; }
	}

	public final FuncsContext funcs() throws RecognitionException {
		FuncsContext _localctx = new FuncsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_funcs);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			tipoOpcional();
			setState(126);
			match(ID);
			setState(127);
			match(PARENTESISIZQ);
			setState(128);
			paramsOpcional();
			setState(129);
			match(PARENTESISDER);
			setState(130);
			varsOpcional();
			setState(131);
			match(LLAVEIZQ);
			setState(132);
			cuerpo();
			setState(133);
			match(LLAVEDER);
			setState(134);
			match(PUNTOYCOMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoOpcionalContext extends ParserRuleContext {
		public TerminalNode NULA() { return getToken(PatitoParser.NULA, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TipoOpcionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipoOpcional; }
	}

	public final TipoOpcionalContext tipoOpcional() throws RecognitionException {
		TipoOpcionalContext _localctx = new TipoOpcionalContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_tipoOpcional);
		try {
			setState(138);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NULA:
				enterOuterAlt(_localctx, 1);
				{
				setState(136);
				match(NULA);
				}
				break;
			case ENTERO:
			case FLOTANTE:
				enterOuterAlt(_localctx, 2);
				{
				setState(137);
				tipo();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamsOpcionalContext extends ParserRuleContext {
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public ParamsOpcionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramsOpcional; }
	}

	public final ParamsOpcionalContext paramsOpcional() throws RecognitionException {
		ParamsOpcionalContext _localctx = new ParamsOpcionalContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_paramsOpcional);
		try {
			setState(142);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(140);
				params();
				}
				break;
			case PARENTESISDER:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamsContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PatitoParser.ID, 0); }
		public TerminalNode DOSPUNTOS() { return getToken(PatitoParser.DOSPUNTOS, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public ParamsPContext paramsP() {
			return getRuleContext(ParamsPContext.class,0);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_params);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(ID);
			setState(145);
			match(DOSPUNTOS);
			setState(146);
			tipo();
			setState(147);
			paramsP();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamsPContext extends ParserRuleContext {
		public TerminalNode COMA() { return getToken(PatitoParser.COMA, 0); }
		public TerminalNode ID() { return getToken(PatitoParser.ID, 0); }
		public TerminalNode DOSPUNTOS() { return getToken(PatitoParser.DOSPUNTOS, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public ParamsPContext paramsP() {
			return getRuleContext(ParamsPContext.class,0);
		}
		public ParamsPContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramsP; }
	}

	public final ParamsPContext paramsP() throws RecognitionException {
		ParamsPContext _localctx = new ParamsPContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_paramsP);
		try {
			setState(156);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(149);
				match(COMA);
				setState(150);
				match(ID);
				setState(151);
				match(DOSPUNTOS);
				setState(152);
				tipo();
				setState(153);
				paramsP();
				}
				break;
			case PARENTESISDER:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CuerpoContext extends ParserRuleContext {
		public TerminalNode LLAVEIZQ() { return getToken(PatitoParser.LLAVEIZQ, 0); }
		public ListaEstatutosContext listaEstatutos() {
			return getRuleContext(ListaEstatutosContext.class,0);
		}
		public TerminalNode LLAVEDER() { return getToken(PatitoParser.LLAVEDER, 0); }
		public CuerpoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuerpo; }
	}

	public final CuerpoContext cuerpo() throws RecognitionException {
		CuerpoContext _localctx = new CuerpoContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_cuerpo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(LLAVEIZQ);
			setState(159);
			listaEstatutos();
			setState(160);
			match(LLAVEDER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListaEstatutosContext extends ParserRuleContext {
		public EstatutoContext estatuto() {
			return getRuleContext(EstatutoContext.class,0);
		}
		public ListaEstatutosContext listaEstatutos() {
			return getRuleContext(ListaEstatutosContext.class,0);
		}
		public ListaEstatutosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaEstatutos; }
	}

	public final ListaEstatutosContext listaEstatutos() throws RecognitionException {
		ListaEstatutosContext _localctx = new ListaEstatutosContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_listaEstatutos);
		try {
			setState(166);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SI:
			case MIENTRAS:
			case ESCRIBE:
			case CORCHIZQ:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(162);
				estatuto();
				setState(163);
				listaEstatutos();
				}
				break;
			case LLAVEDER:
			case CORCHDER:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EstatutoContext extends ParserRuleContext {
		public AsignaContext asigna() {
			return getRuleContext(AsignaContext.class,0);
		}
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public CicloContext ciclo() {
			return getRuleContext(CicloContext.class,0);
		}
		public LlamadaContext llamada() {
			return getRuleContext(LlamadaContext.class,0);
		}
		public TerminalNode PUNTOYCOMA() { return getToken(PatitoParser.PUNTOYCOMA, 0); }
		public ImprimeContext imprime() {
			return getRuleContext(ImprimeContext.class,0);
		}
		public TerminalNode CORCHIZQ() { return getToken(PatitoParser.CORCHIZQ, 0); }
		public ListaEstatutosContext listaEstatutos() {
			return getRuleContext(ListaEstatutosContext.class,0);
		}
		public TerminalNode CORCHDER() { return getToken(PatitoParser.CORCHDER, 0); }
		public EstatutoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estatuto; }
	}

	public final EstatutoContext estatuto() throws RecognitionException {
		EstatutoContext _localctx = new EstatutoContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_estatuto);
		try {
			setState(179);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(168);
				asigna();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(169);
				condicion();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(170);
				ciclo();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(171);
				llamada();
				setState(172);
				match(PUNTOYCOMA);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(174);
				imprime();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(175);
				match(CORCHIZQ);
				setState(176);
				listaEstatutos();
				setState(177);
				match(CORCHDER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AsignaContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PatitoParser.ID, 0); }
		public TerminalNode ASIGNA() { return getToken(PatitoParser.ASIGNA, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode PUNTOYCOMA() { return getToken(PatitoParser.PUNTOYCOMA, 0); }
		public AsignaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asigna; }
	}
